<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evernote</string>
    <string name="action_settings">Настройки</string>
    <string name="action_login">Войти</string>
    <string name="action_logout">Выйти</string>
    <string name="action_search">Поиск</string>
    <string name="title_activity_login">Авторизация</string>
    <string name="error_creating_notestore">Ошибка синхронизации</string>
    <string name="success_creating_notestore">Синхронизация прошла успешно</string>
    <string name="ok">OK</string>
    <string name="error_listing_notebooks">Error listing notebooks</string>
    <string name="btn_save_changes">Сохранить изменения</string>
    <string name="btn_edit_note">Редактировать</string>
    <string name="btn_delete_note">Удалить</string>
    <string name="btn_to_start_adding_note_activity">Создать заметку</string>
    <string name="note_title">Введите заголовок...</string>
    <string name="note_body">... а сюда -- заметку</string>
    <string name="btn_send">Сохранить</string>
    <string name="btn_cancel">Отменить</string>
    <string name="btn_select_notebook">Выбрать блокнот</string>
    <string name="btn_show_all_notes">Показать все блокноты</string>
    <string name="empty_content_error">Заголовок или содержание не может быть пустым</string>
    <string name="success_saving_note">Заметка добавленна</string>
    <string name="success_editing_note">Заметка изменена</string>
    <string name="success_deleting_note">Заметка удалена</string>
    <string name="create_new_note">Создать новую заметку</string>
    <string name="error_saving_note">Ошибка при создании заметки</string>
    <string name="panel_text_add">текст</string>
    <string name="panel_photo_add">камера</string>
    <string name="panel_image_add">фото</string>
    <string name="panel_reminder_add">напомнить</string>
    <string name="panel_list_add">список</string>

    <string name="error_sync_with_server">Не удалось соединиться с сервером</string>

    <string name="success_sync_with_server">Все изменения сохранены на сервер</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_menu_notes">Все заметки</string>
    <string name="left_menu_tags">Тэги</string>
    <string name="left_menu_notebooks">Блокноты</string>
    <string name="left_menu_links">Ярлыки</string>
    <string name="left_menu_white_notebooks">Белые блокноты</string>

</resources>
