<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#aaaaaa"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="0dp"
    tools:context="ru.mail.app.MainActivity$PlaceholderFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_note"
        android:id="@+id/createNewNoteTextView"
        android:padding="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createNewNoteTextView"
        android:id="@+id/buttonPanel"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:background="@drawable/round_button"
                style="@style/AppTheme"
                android:src="@drawable/ic_list_add_text"
                android:layout_width="@dimen/diameter"
                android:layout_height="@dimen/diameter"
                android:id="@+id/textNoteAdd"/>
            <TextView
                style="@style/panel_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/panel_text_add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:background="@drawable/round_button"
                style="@style/AppTheme"
                android:src="@drawable/ic_list_add_photos"
                android:layout_width="@dimen/diameter"
                android:layout_height="@dimen/diameter"
                android:id="@+id/photoNoteAdd"/>
            <TextView
                style="@style/panel_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/panel_image_add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:background="@drawable/round_button"
                style="@style/AppTheme"
                android:src="@drawable/ic_list_add_camera"
                android:layout_width="@dimen/diameter"
                android:layout_height="@dimen/diameter"
                android:id="@+id/cameraNoteAdd"/>
            <TextView
                style="@style/panel_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/panel_photo_add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:background="@drawable/round_button"
                style="@style/AppTheme"
                android:src="@drawable/ic_list_add_reminder"
                android:layout_width="@dimen/diameter"
                android:layout_height="@dimen/diameter"
                android:id="@+id/reminderNoteAdd"/>
            <TextView
                style="@style/panel_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/panel_reminder_add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:background="@drawable/round_button"
                style="@style/AppTheme"
                android:src="@drawable/ic_list_add_list"
                android:layout_width="@dimen/diameter"
                android:layout_height="@dimen/diameter"
                android:id="@+id/listNoteAdd"/>
            <TextView
                style="@style/panel_add_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/panel_list_add"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/buttonClass"
        android:text="@string/action_login"
        android:id="@+id/login"
        android:onClick="login"
        android:layout_above="@+id/createNote"/>

    <Button
        style="@style/buttonClass"
        android:layout_width="match_parent"
        android:text="@string/btn_to_start_adding_note_activity"
        android:id="@+id/createNote"
        android:onClick="startNoteAddingActivity"
        android:layout_above="@+id/logout"
        android:layout_centerHorizontal="true"
        />

    <Button
        style="@style/buttonClass"
        android:layout_width="match_parent"
        android:text="@string/action_logout"
        android:id="@+id/logout"
        android:onClick="logout"
        android:layout_alignParentBottom="true"
        />


    <GridView
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:numColumns="2"
        android:id="@+id/gridView"
        android:layout_below="@+id/buttonPanel"
        android:layout_alignParentStart="true"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />


</RelativeLayout>

